--- a/packages/pont-engine/package.json
+++ b/packages/pont-engine/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "chalk": "^2.3.0",
     "commander": "^2.19.0",
+    "dayjs": "^1.10.7",
     "fs-extra": "^5.0.0",
     "inquirer": "^7.1.0",
     "lodash": "^4.17.5",
