--- a/packages/vscode-pont/package.json
+++ b/packages/vscode-pont/package.json
@@ -73,8 +73,7 @@
   "dependencies": {
     "@types/fs-extra": "^5.1.0",
     "fs-extra": "^7.0.1",
-    "mockjs": "^1.0.1-beta3",
-    "pont-engine": "1.0.12"
+    "mockjs": "^1.0.1-beta3"
   },
   "devDependencies": {
     "rimraf": "^3.0.2",
